# VisionROI

./: .gitignore  LICENSE  README.md  app.py  autostart.patch  camera_worker.py  install.sh  pyproject.toml  requirements.txt  rois_20250801_161436.json  state_manager.py  vision-roi.service
data_sources/test_source/: config.json  custom.py  rois.json
docs/: ffmpeg_stream_fix_explanation.md  logging_overview.md  ocr_pipeline.md  rapidocr_roi_consistency.md  rapidocr_text_score_default.md  rapidocr_worker_modes.md
engines/typhoon_ocr/: custom.py
inference_modules/: base_ocr.py
inference_modules/easy_ocr/: .gitignore  custom.py
inference_modules/light_button/: custom.py
inference_modules/rapid_ocr/: custom.py
inference_modules/tesseract_ocr/: __init__.py  custom.py
inference_modules/trocr/: custom.py
inference_modules/typhoon_ocr/: custom.py
sources/: .gitignore
static/: style.css
templates/: base.html  create_mqtt.html  create_page.html  create_source.html  dashboard.html  docs.html  home.html  inference.html  inference_page.html  roi_selection.html
tests/: __init__.py  conftest.py  stubs.py  test_camera_reopen_after_fail.py  test_camera_worker_avf_pixel_format.py  test_camera_worker_ffmpeg_cmd.py  test_camera_worker_ffmpeg_errors.py  test_camera_worker_ffmpeg_read_error.py  test_camera_worker_ffprobe.py  test_camera_worker_latest_frame.py  test_camera_worker_loop_closed.py  test_camera_worker_read_timeout.py  test_camera_worker_resolution.py  test_dashboard_payload.py  test_detect_page.py  test_easy_ocr_cleanup.py  test_easy_ocr_roi_queue.py  test_event_loop.py  test_inference_draw_boxes.py  test_inference_group_switch.py  test_inference_page_filter_rois.py  test_inference_page_switch.py  test_inference_routes.py  test_inference_start_stream_fail.py  test_rapid_ocr_cleanup.py  test_rapid_ocr_result_parsing.py  test_rapid_ocr_roi_copy.py  test_read_and_queue_frame.py  test_roi_latency_defaults.py  test_roi_selection_buttons.py  test_roi_selection_click_page_rect.py  test_roi_selection_click_polygon.py  test_roi_selection_click_rect.py  test_roi_selection_dblclick_rect.py  test_roi_selection_delete_page_roi.py  test_roi_selection_drag_rect.py  test_roi_selection_mousemove_preview_polygon.py  test_roi_selection_mousemove_preview_rect.py  test_roi_selection_no_old_buttons.py  test_roi_selection_save_all.py  (+15 more)
(+21 files in other folders)
