[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web_ocrroi"
version = "0.1.0"
description = "Quart app for OCR and ROI handling"
requires-python = ">=3.10"
dependencies = [
    "Quart",
    "opencv-python",
    "numpy",
    "Pillow",
    "easyocr",
]

[project.optional-dependencies]
extras = [
    "onnxruntime",
    "requests",
    "tensorflow",
    "torch",
    "websockets",
    "scipy",
    "lap",
    "motmetrics",
    "pandas",
    "onnx",
    "torchvision",
    "pycuda",
    "tensorrt",
    "yolox",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
