[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VisionROI"
version = "0.1.0"
description = "Quart app for OCR and ROI handling"
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.10"
dependencies = [
    "Quart",
    "opencv-python",
    "numpy",
    "Pillow",
    "easyocr",
    "rapidocr",
    "pytesseract",
    "paho-mqtt",
]

[project.optional-dependencies]
extras = [
    "onnxruntime",
    "requests",
    "tensorflow",
    "torch",
    "transformers",
    "websockets",
    "onnx",
    "torchvision",
    "pycuda",
    "tensorrt",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
